# internal/handler/dto/user.go
@@ -6,6 +6,6 @@ type GetUser struct {
 	ID        int       `json:"id"`
 	Login     string    `json:"login"`
 	Email     string    `json:"email"`
-	Password  []byte    `json:"password"`
+	Password  string    `json:"password"`
 	CreatedAt time.Time `json:"created_at"`
 }
